[fix] 배포 서버 설정
민감한 정보 환경변수로 설정(추가)
cors 설정